2024-01-14T00:30:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7515778729 # 21
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 90 194
* notice: prev accum: outdated-unq outdated-all / unq all: 1474 3431 / 1615 3632
* notice: next accum: outdated-unq outdated-all / unq all: 1479 3438 / 1615 3632
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-30] / []

2024-01-13T00:26:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7508948412 # 18
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 94 201
* notice: prev accum: outdated-unq outdated-all / unq all: 1472 3429 / 1610 3626
* notice: next accum: outdated-unq outdated-all / unq all: 1474 3431 / 1615 3632
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [2023-12-29] / [2024-01-12]

2024-01-12T08:07:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7499492736 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 93 197
* notice: prev accum: outdated-unq outdated-all / unq all: 1472 3429 / 1609 3625
* notice: next accum: outdated-unq outdated-all / unq all: 1472 3429 / 1610 3626
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-12]

2024-01-12T00:27:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7496216200 # 15