@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-14T00:30:00Z",
+  "timestamp" : "2024-01-14T08:00:45Z",
   "count_outdated" : 3438,
   "uniques_outdated" : 1479,
-  "count" : 3632,
-  "uniques" : 1615,
+  "count" : 3635,
+  "uniques" : 1618,
   "clones" : [
     {
       "timestamp": "2023-12-31T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 8, 14 ],
-      "count_decinc": [ 0, 14 ],
-      "uniques": 9,
-      "uniques_minmax": [ 5, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "count": 1,
+      "count_minmax": [ 1, 14 ],
+      "count_decinc": [ 13, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 9 ],
+      "uniques_decinc": [ 8, 9 ]
     },
     {
       "timestamp": "2024-01-01T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
