@@ -1,11 +1,11 @@
 {
-  "count": 194,
-  "uniques": 90,
+  "count": 184,
+  "uniques": 85,
   "clones": [
     {
       "timestamp": "2023-12-31T00:00:00Z",
-      "count": 14,
-      "uniques": 9
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-01-01T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2024-01-12T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
